--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
             </title>
             <body>
                 <p>Este sitio contiene un mensaje secreto</p>
-                <div class="camellia" id="4619057815ef2dda9a290052553bd4e5">Hola mundo</div>
+                <div class="camellia" id="4619057815ef2dda9a290052553bd4e5"></div>
             </body>
         </html>
         
