--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
             </title>
             <body>
                 <p>Este sitio contiene un mensaje secreto</p>
-                <div class="camelliahex" id="4619057815ef2dda9a290052553bd4e5"></div>
-                <div class="camellia64" id="RhkFeBXvLdqaKQBSVTvU5Q=="></div>
+                <div class="des64" id="nhaIrQufxti9MlEMAsfo6QB7IzvlFGPs/yWELjlI0rw="></div>
+                <div class="iv64" id="nhaIrQufxtg="></div>
+                <div class="key" id="-8B key-"></div>
             </body>
         </html>
         
