--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
             </title>
             <body>
                 <p>Este sitio contiene un mensaje secreto</p>
-                <div class="des64" id="nhaIrQufxti9MlEMAsfo6QB7IzvlFGPs/yWELjlI0rw="></div>
-                <div class="iv64" id="nhaIrQufxtg="></div>
-                <div class="key" id="-8B key-"></div>
+                <div class="deshex" id="4852f9ca304ab2951ddb148c0ba2d84efed266d145443b7e2bade276157aecc3"></div>
+                <div class="ivhex" id="4852f9ca304ab295"></div>
+                <div class="key" id="b'-8B key-'"></div>
             </body>
         </html>
         
