--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
             </title>
             <body>
                 <p>Este sitio contiene un mensaje secreto</p>
-                <div class="deshex" id="bb801909941a709e6d2bb042e6532a6435a73411eddac5237d0f5952943a1005"></div>
-                <div class="ivhex" id="bb801909941a709e"></div>
-                <div class="key" id="b'-8B key-'"></div>
+                <div class="deshex" id="9408f9e4335af4673b7ef9d2e00c9adc4c6747ea67e91a7a4a8fb55fd5eb8e6c"></div>
+                <div class="ivhex" id="9408f9e4335af467"></div>
+                <div class="keyhex" id="2d3842206b65792d"></div>
             </body>
         </html>
         
