--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
             </title>
             <body>
                 <p>Este sitio contiene un mensaje secreto</p>
-                <div class="deshex" id="9408f9e4335af4673b7ef9d2e00c9adc4c6747ea67e91a7a4a8fb55fd5eb8e6c"></div>
-                <div class="ivhex" id="9408f9e4335af467"></div>
-                <div class="keyhex" id="2d3842206b65792d"></div>
+                <div class="des" id="/a+RFey0OwWTAxXA37tcO0pi9VIFr++a8tBanzi3TFk="></div>
+                <div class="iv" id="/a+RFey0OwU="></div>
+                <div class="key" id="LThCIGtleS0="></div>
             </body>
         </html>
         
